Authentication and Authorization added